--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Udacity Portfolio Project</title>
     <link rel="stylesheet" type="text/css" href="css/portfolio_style.css">
     <link rel="shortcut icon" href="img/swiss-army-knife-154314_1280.ico">
 </head>
-
-
 <body>
     <header>
         <div class="logo">
@@ -19,54 +17,50 @@
             <h2>Full Stack Developer</h2>
         </div>
     </header>
-    <section>
-        <div class="row">
-            <div class="stack col-1">
-                <div class="stack_box">
-                    My Stack
-                </div>
-                <div class="stack_box">
-                    <img src="img/python.png">
-                </div>
-                <div class="stack_box">
-                    <img src="img/Mysql-dolphin-square.svg">
-                </div>
-                <div class="stack_box">
-                    <img src="img/css3_2.png" class="css3">
-                </div>
-                <div class="stack_box">
-                    <img src="img/html5_2.png">
-                </div>
+    <div class="row">
+        <div class="stack col-1">
+            <div class="stack_box">
+                My Stack
             </div>
-            <div class="the_pic col-2">
-                <img src="img/volunteer.jpeg">
+            <div class="stack_box">
+                <img src="img/python.png">
+            </div>
+            <div class="stack_box">
+                <img src="img/Mysql-dolphin-square.svg">
+            </div>
+            <div class="stack_box">
+                <img src="img/css3_2.png" class="css3">
+            </div>
+            <div class="stack_box">
+                <img src="img/html5_2.png">
             </div>
         </div>
-    </section>
-    <section>
-        <div class="col-3">
-            <h1>Featured Work</h1>
-            <div class="portfolio_item">
-                <article>
-                    <div class="img_container">
-                        <img src="img/factory.jpg">
-                    </div>
-                    <h2>GitHub</h2>
-                </article>
-                <article>
-                    <div class="img_container">
-                        <img src="img/typewriter-final.png">
-                    </div>
-                    <h2>Coding Blog</h2>
-                </article>
-                <article>
-                    <div class="img_container">
-                        <img src="img/teacher-apple-final.png">
-                    </div>
-                    <h2>Stackoverflow</h2>
-                </article>
-            </div>
+        <div class="the_pic col-2">
+            <img src="img/volunteer.jpeg">
         </div>
-    </section>
+    </div>
+    <div class="col-3">
+        <h1>Featured Work</h1>
+        <div class="portfolio_item">
+            <article>
+                <div class="img_container">
+                    <img src="img/factory.jpg">
+                </div>
+                <h2>GitHub</h2>
+            </article>
+            <article>
+                <div class="img_container">
+                    <img src="img/typewriter-final.png">
+                </div>
+                <h2>Coding Blog</h2>
+            </article>
+            <article>
+                <div class="img_container">
+                    <img src="img/teacher-apple-final.png">
+                </div>
+                <h2>Stackoverflow</h2>
+            </article>
+        </div>
+    </div>
 </body>
 </html>
